# YOLO26-seg-mask

./: .gitignore  LICENSE  MaskYOLO.spec  README.md  README_en.md  main.py  mask-yolo.spec  pyproject.toml  requirements.txt  version_info.txt
hooks/: hook-flet.py
